// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Excerpt Excerpt component 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Excerpt"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="text-chunk obojobo-draft--chunks--excerpt pad is-body-style-type-filled-box is-top-edge-type-undefined is-bottom-edge-type-undefined is-width-medium is-font-sans is-font-style-undefined is-line-height-type-moderate is-font-size-smaller is-not-showing-effect"
  >
    <blockquote
      cite="test"
    >
      <div
        className="excerpt-content"
      >
        <div
          className="wrapper"
        >
          <div
            className="component"
            data-focussed={false}
            data-id="id-1"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.Excerpt"
            id="obo-id-1"
            tabIndex={-1}
          >
            <div
              className="text-chunk obojobo-draft--chunks--excerpt pad is-body-style-type-filled-box is-top-edge-type-undefined is-bottom-edge-type-undefined is-width-medium is-font-sans is-font-style-undefined is-line-height-type-moderate is-font-size-smaller is-not-showing-effect"
            >
              <blockquote
                cite="test"
              >
                <div
                  className="excerpt-content"
                >
                  <div
                    className="wrapper"
                  />
                  <div
                    className="overlay"
                  />
                </div>
              </blockquote>
            </div>
          </div>
          <div
            className="component"
            data-focussed={false}
            data-id="id-2"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.Excerpt"
            id="obo-id-2"
            tabIndex={-1}
          >
            <div
              className="text-chunk obojobo-draft--chunks--excerpt pad is-body-style-type-filled-box is-top-edge-type-undefined is-bottom-edge-type-undefined is-width-medium is-font-sans is-font-style-undefined is-line-height-type-moderate is-font-size-smaller is-not-showing-effect"
            >
              <blockquote
                cite="test"
              >
                <div
                  className="excerpt-content"
                >
                  <div
                    className="wrapper"
                  >
                    <div
                      className="component"
                      data-focussed={false}
                      data-id="id-3"
                      data-obo-component={true}
                      data-type="ObojoboDraft.Chunks.Excerpt"
                      id="obo-id-3"
                      tabIndex={-1}
                    >
                      <div
                        className="text-chunk obojobo-draft--chunks--excerpt pad is-body-style-type-filled-box is-top-edge-type-undefined is-bottom-edge-type-undefined is-width-medium is-font-sans is-font-style-undefined is-line-height-type-moderate is-font-size-smaller is-not-showing-effect"
                      >
                        <blockquote
                          cite="test"
                        >
                          <div
                            className="excerpt-content"
                          >
                            <div
                              className="wrapper"
                            />
                            <div
                              className="overlay"
                            />
                          </div>
                        </blockquote>
                      </div>
                    </div>
                  </div>
                  <div
                    className="overlay"
                  />
                </div>
              </blockquote>
            </div>
          </div>
        </div>
        <div
          className="overlay"
        />
      </div>
    </blockquote>
  </div>
</div>
`;

exports[`Excerpt Excerpt component with citation 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Excerpt"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="text-chunk obojobo-draft--chunks--excerpt pad is-body-style-type-filled-box is-top-edge-type-undefined is-bottom-edge-type-undefined is-width-medium is-font-sans is-font-style-undefined is-line-height-type-moderate is-font-size-smaller is-not-showing-effect"
  >
    <blockquote
      cite="test"
    >
      <div
        className="excerpt-content"
      >
        <div
          className="wrapper"
        >
          <div
            className="component"
            data-focussed={false}
            data-id="id-1"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.Excerpt"
            id="obo-id-1"
            tabIndex={-1}
          >
            <div
              className="text-chunk obojobo-draft--chunks--excerpt pad is-body-style-type-filled-box is-top-edge-type-undefined is-bottom-edge-type-undefined is-width-medium is-font-sans is-font-style-undefined is-line-height-type-moderate is-font-size-smaller is-not-showing-effect"
            >
              <blockquote
                cite="test"
              >
                <div
                  className="excerpt-content"
                >
                  <div
                    className="wrapper"
                  />
                  <div
                    className="overlay"
                  />
                </div>
              </blockquote>
            </div>
          </div>
          <div
            className="component"
            data-focussed={false}
            data-id="id-2"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.Excerpt"
            id="obo-id-2"
            tabIndex={-1}
          >
            <div
              className="text-chunk obojobo-draft--chunks--excerpt pad is-body-style-type-filled-box is-top-edge-type-undefined is-bottom-edge-type-undefined is-width-medium is-font-sans is-font-style-undefined is-line-height-type-moderate is-font-size-smaller is-not-showing-effect"
            >
              <blockquote
                cite="test"
              >
                <div
                  className="excerpt-content"
                >
                  <div
                    className="wrapper"
                  >
                    <div
                      className="component"
                      data-focussed={false}
                      data-id="id-3"
                      data-obo-component={true}
                      data-type="ObojoboDraft.Chunks.Excerpt"
                      id="obo-id-3"
                      tabIndex={-1}
                    >
                      <div
                        className="text-chunk obojobo-draft--chunks--excerpt pad is-body-style-type-filled-box is-top-edge-type-undefined is-bottom-edge-type-undefined is-width-medium is-font-sans is-font-style-undefined is-line-height-type-moderate is-font-size-smaller is-not-showing-effect"
                      >
                        <blockquote
                          cite="test"
                        >
                          <div
                            className="excerpt-content"
                          >
                            <div
                              className="wrapper"
                            />
                            <div
                              className="overlay"
                            />
                          </div>
                        </blockquote>
                      </div>
                    </div>
                  </div>
                  <div
                    className="overlay"
                  />
                </div>
              </blockquote>
            </div>
          </div>
        </div>
        <div
          className="overlay"
        />
      </div>
      <cite>
        <span
          className="obo-text"
          data-group-index={0}
        >
          <span>
            <span>
              <span>
                Placeholder text
              </span>
            </span>
          </span>
        </span>
      </cite>
    </blockquote>
  </div>
</div>
`;

exports[`Excerpt Excerpt component with effect 1`] = `
<div
  className="component"
  data-focussed={false}
  data-id="id"
  data-obo-component={true}
  data-type="ObojoboDraft.Chunks.Excerpt"
  id="obo-id"
  tabIndex={-1}
>
  <div
    className="text-chunk obojobo-draft--chunks--excerpt pad is-body-style-type-filled-box is-top-edge-type-undefined is-bottom-edge-type-undefined is-width-medium is-font-sans is-font-style-undefined is-line-height-type-moderate is-font-size-smaller is-showing-effect"
  >
    <blockquote
      cite="test"
    >
      <div
        className="excerpt-content"
      >
        <div
          className="wrapper"
        >
          <div
            className="component"
            data-focussed={false}
            data-id="id-1"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.Excerpt"
            id="obo-id-1"
            tabIndex={-1}
          >
            <div
              className="text-chunk obojobo-draft--chunks--excerpt pad is-body-style-type-filled-box is-top-edge-type-undefined is-bottom-edge-type-undefined is-width-medium is-font-sans is-font-style-undefined is-line-height-type-moderate is-font-size-smaller is-not-showing-effect"
            >
              <blockquote
                cite="test"
              >
                <div
                  className="excerpt-content"
                >
                  <div
                    className="wrapper"
                  />
                  <div
                    className="overlay"
                  />
                </div>
              </blockquote>
            </div>
          </div>
          <div
            className="component"
            data-focussed={false}
            data-id="id-2"
            data-obo-component={true}
            data-type="ObojoboDraft.Chunks.Excerpt"
            id="obo-id-2"
            tabIndex={-1}
          >
            <div
              className="text-chunk obojobo-draft--chunks--excerpt pad is-body-style-type-filled-box is-top-edge-type-undefined is-bottom-edge-type-undefined is-width-medium is-font-sans is-font-style-undefined is-line-height-type-moderate is-font-size-smaller is-not-showing-effect"
            >
              <blockquote
                cite="test"
              >
                <div
                  className="excerpt-content"
                >
                  <div
                    className="wrapper"
                  >
                    <div
                      className="component"
                      data-focussed={false}
                      data-id="id-3"
                      data-obo-component={true}
                      data-type="ObojoboDraft.Chunks.Excerpt"
                      id="obo-id-3"
                      tabIndex={-1}
                    >
                      <div
                        className="text-chunk obojobo-draft--chunks--excerpt pad is-body-style-type-filled-box is-top-edge-type-undefined is-bottom-edge-type-undefined is-width-medium is-font-sans is-font-style-undefined is-line-height-type-moderate is-font-size-smaller is-not-showing-effect"
                      >
                        <blockquote
                          cite="test"
                        >
                          <div
                            className="excerpt-content"
                          >
                            <div
                              className="wrapper"
                            />
                            <div
                              className="overlay"
                            />
                          </div>
                        </blockquote>
                      </div>
                    </div>
                  </div>
                  <div
                    className="overlay"
                  />
                </div>
              </blockquote>
            </div>
          </div>
        </div>
        <div
          className="overlay"
        />
      </div>
    </blockquote>
  </div>
</div>
`;
